# akka-projection

./: .fossa.yml  .gitignore  .jvmopts-travis  .scala-steward.conf  .scalafmt.conf  .travis.yml  LICENSE  README.md  RELEASING.md  build.sbt  container-license-acceptance.txt  docker-compose.yml  sbtconcurrency.sbt-travis  version.sbt  worksheet.sc
.github/: release-drafter.yml
.github/actions/release-prep-only/: action.yml
.github/workflows/: checks.yml  dependency-submission.yml  fossa.yml  integration-tests-cassandra.yml  integration-tests-dynamodb.yml  integration-tests-grpc.yml  integration-tests-jdbc.yml  integration-tests-kafka.yml  integration-tests-r2dbc-mssql.yml  integration-tests-r2dbc.yml  integration-tests-slick.yml  integration-tests.yml  link-validator.yml  native-image-tests.yml  release-drafter.yml  release.yml  unit-tests.yml
.travis/: deploy-key.enc  travis_gustav.enc
akka-distributed-cluster-docs/src/main/paradox/: feature-summary.md  guide.md  index.md  overview.md  sample.md  use-cases.md
akka-edge-docs/src/main/paradox/: feature-summary.md  guide-rs.md  guide.md  index.md  lightweight-deployments.md  overview.md  use-cases.md
akka-projection-alpakka-kafka/src/main/scala/: KafkaSourceProvider.scala
akka-projection-alpakka-kafka/src/test/resources/: application.conf  logback-test.xml
akka-projection-cassandra/src/it/resources/: logback-test.xml
akka-projection-cassandra/src/main/resources/: reference.conf
akka-projection-cassandra/src/test/resources/: logback-test.xml
akka-projection-core-test/src/test/resources/: logback-test.xml
akka-projection-core/src/main/protobuf/: ProjectionMessages.proto
akka-projection-core/src/main/resources/: reference.conf
akka-projection-dynamodb-integration/src/test/resources/: logback-test.xml
akka-projection-dynamodb/scripts/: create-tables.sh
akka-projection-dynamodb/src/main/resources/: reference.conf
akka-projection-grpc-integration/src/test/resources/: persistence.conf
akka-projection-grpc-tests/src/it/resources/: application-h2.conf  logback-test.xml  persistence.conf
akka-projection-grpc/ddl-scripts/: create_tables_postgres.sql  drop_tables_postgres.sql
akka-projection-grpc/samples/shopping-analytics-service-java/: README.md  docker-compose.yml  pom.xml
akka-projection-grpc/samples/shopping-analytics-service-java/ddl-scripts/: create_tables.sql
akka-projection-grpc/samples/shopping-cart-service-java/: README.md  pom.xml
akka-projection-r2dbc/ddl-scripts/: create_tables_postgres.sql  create_tables_sqlserver.sql  create_tables_yugabyte.sql
docker-files/: cassandra.yaml  docker-compose-dynamodb.yml  docker-compose-sqlserver.yml  docker-compose-yugabyte.yml
docs/: release-train-issue-template.md
docs/src/main/paradox/: actor.md  classic.md  (+23 more)
project/: AkkaDisciplinePlugin.scala  AkkaSnapshotRepository.scala  Common.scala  CopyrightHeader.scala  Dependencies.scala  IntegrationTests.scala  Protobuf.scala  Publish.scala  Scala3.scala  SequentialTestExecution.scala  SequentialTestExecutionInCI.scala  VersionSyncCheckPlugin.scala  Whitesource.scala  plugins.sbt  project-info.conf
samples/grpc/drone-device-scala/: build.sbt
samples/grpc/iot-service/: README.md
samples/grpc/iot-service-java/: README.md  pom.xml
samples/grpc/iot-service-rs/: .gitignore  Cargo.toml  README.md
samples/grpc/iot-service-rs/.cargo/: config.toml
samples/grpc/iot-service-rs/backend/: Cargo.toml  build.rs
samples/grpc/iot-service-rs/backend/proto/: README.md
samples/grpc/iot-service-rs/backend/src/: http_server.rs  main.rs  proto.rs  registration_projection.rs  temperature.rs  temperature_production.rs  udp_server.rs
samples/grpc/iot-service-rs/frontend/: Cargo.toml  index.html  index.scss  trunk.toml
samples/grpc/iot-service-rs/frontend/src/: app.rs  main.rs  temperature.rs
samples/grpc/iot-service-rs/model/: Cargo.toml
samples/grpc/iot-service-rs/model/src/: lib.rs  temperature.rs
samples/grpc/iot-service-scala/: README.md  build.sbt  docker-compose.yml
samples/grpc/local-drone-control-java/: README.md  pom.xml
samples/grpc/local-drone-control-scala/: .dockerignore  .gitignore  .scalafmt.conf  README.md  build.sbt  docker-compose.yml
samples/grpc/restaurant-drone-deliveries-service-java/: README.md  pom.xml
samples/grpc/restaurant-drone-deliveries-service-scala/: README.md  build.sbt
samples/grpc/shopping-analytics-service-java/: README.md  pom.xml
samples/grpc/shopping-analytics-service-scala/: README.md  build.sbt
samples/grpc/shopping-cart-service-java/: README.md  pom.xml
samples/grpc/shopping-cart-service-scala/: README.md  build.sbt  docker-compose.yml
samples/replicated/shopping-cart-service-java/: README.md  docker-compose.yml  pom.xml
samples/replicated/shopping-cart-service-scala/: .gitignore  .scalafmt.conf  README.md  build.sbt  docker-compose.yml
scripts/: link-validator-distributed-cluster.conf  link-validator-edge.conf  link-validator.conf  prepare-downloads.sh  release-prep.sh  start-dockers.sh
(+1217 files in other folders)
